# OnvifDeviceManager

./: .gitignore  Makefile.am  README.md  autogen.sh  bootstrap.sh  build_gui_deps.sh  configure.ac
deployment/: io.github.quedale.onvifmgr.desktop.in  io.github.quedale.onvifmgr.yml
docker/: Dockerfile  docker-compose.yaml  docker_build_run.sh
sample/: player-test.c  revealer-alert-banner.c  slider-test.c  widget-test.c
scripts/: utils.sh
src/: device_list.c  device_list.h  gui-test.c  image-resizer.c  onvif-client.c  onvif-mgr.c  onvif-server.c  player-test.c  soap-test.c
src/alsa/: alsa_devices.c  alsa_devices.h  alsa_utils.c  alsa_utils.h
src/animations/: dotted_slider.c  dotted_slider.h
src/animations/gtk/: css_dotted_slider.c  css_dotted_slider.h  custom_gtk_progress_tracker.c  custom_gtk_progress_tracker.h  custom_gtk_revealer.c  custom_gtk_revealer.h  gtk_dotted_slider.c  gtk_dotted_slider.h  gtk_dotted_slider_widget.c  gtk_dotted_slider_widget.h
src/app/: add_device.c  add_device.h  c_ownable_interface.c  c_ownable_interface.h  credentials_input.c  credentials_input.h  device.c  device.h  device_list.c  device_list.h  encryption_utils.c  gtkbinaryimage.c  gtkbinaryimage.h  gtkstyledimage.c  gtkstyledimage.h  gui_utils.c  gui_utils.h  omgr_device_row.c  omgr_device_row.h  onvif_app.c  onvif_app.h  onvif_app_shutdown.c  onvif_app_shutdown.h  onvif_details.c  onvif_details.h  onvif_info.c  onvif_info.h  onvif_info_details.c  onvif_info_details.h  onvif_network.c  onvif_network.h  onvif_nvt.c  onvif_nvt.h  onvif_nvt_stream_details.c  onvif_nvt_stream_details.h  task_manager.c  task_manager.h
src/app/details/: onvif_details.c  onvif_details.h  onvif_details_panel.c  onvif_details_panel.h  onvif_info.c  onvif_info.h  onvif_network.c  onvif_network.h  onvif_timedate.c  onvif_timedate.h
src/app/dialog/: add_device.c  add_device.h  app_dialog.c  app_dialog.h  credentials_input.c  credentials_input.h  gtkprofilepanel.c  gtkprofilepanel.h  msg_dialog.c  msg_dialog.h  omgr_add_dialog.c  omgr_add_dialog.h  omgr_app_dialog.c  omgr_app_dialog.h  omgr_credentials_dialog.c  omgr_credentials_dialog.h  omgr_encryoted_store_dialog.c  omgr_encryoted_store_dialog.h  omgr_encrypted_store.c  omgr_encrypted_store.h  omgr_msg_dialog.c  omgr_msg_dialog.h  omgr_profiles_dialog.c  omgr_profiles_dialog.h  omgr_truststore_dialog.c  omgr_truststore_dialog.h  profiles_dialog.c  profiles_dialog.h
src/app/settings/: app_settings.c  app_settings.h  app_settings_discovery.c  app_settings_discovery.h  app_settings_stream.c  app_settings_stream.h
src/demo/: encryptiondemo.c  gtk-gif.c  gtkstyledimagedemo.c  omgr-device-demo.c  omgr-dialog-demo.c  overlay-demo.c  player-demo.c  queue-demo.c  queue_test.c  slider-demo.c
src/demo/css/slider/: dotted_slider.css  dotted_slider.glade  dotted_slider_demo.c  dotted_slider_with_files.c
src/gst/: backchannel.c  backchannel.h  gst_plugin_utils.c  gst_plugin_utils.h  gstrtspplayer.c  gstrtspplayer.h  gstrtspstream.c  gstrtspstream.h  onvifinitstaticplugins.c  onvifinitstaticplugins.h  overlay.c  overlay.h  player.c  player.h  sink-retriever.c  src_retriever.c  src_retriever.h
src/gst/gtk/: gstgtkbasesink.c  gstgtkbasesink.h  gstgtksink.c  gstgtksink.h  gstplugin.c  gtkgstbasewidget.h  gtkgstwidget.c  gtkgstwidget.h
src/gst2/: onvifinitstaticplugins.c  overlay.c  player.c  player.h  sink-retriever.c  sink-retriever.h
src/gst2/gtk/: config.h  gstgtkbasesink.c  gstgtkbasesink.h  gstgtkutils.c  gstgtkutils.h  gtkgstbasewidget.c  gtkgstwidget.c
src/gui/: credentials_input.c  gui_update_calls.c  gui_update_calls.h
src/oo/: clist.c  clist.h  clist_ts.c  clist_ts.h  cobject.c  cobject.h
src/queue/: event_queue.c  event_queue.h  queue_event.c  queue_event.h  queue_thread.c  queue_thread.h
src/soap/: client.c  client.h
src/udp/: discoverer.c  discoverer.h  discovery.c  discovery.h  soap_parser copy.c  soap_parser.c  soap_parser.h
src/ui/: onvif_device.c  onvif_device.h  onvif_list.c  onvif_list.h
src/utils/: c_ownable_interface.c  encryption_utils.c  encryption_utils.h  mem_printer.c  mem_printer.h  omgr_serializable_interface.c  omgr_serializable_interface.h
wsdl/: device_service.wsdl  media.wsdl  onvif.xsd  www.onvif.org.ver10.device.wsdl
